Full review complete — all 22 files under src/main/java reviewed line by line (8 parallel review agents, every finding independently verified in-source before applying). Three real concurrency bugs fixed in AbstractOffHeapCache, one resource leak fixed in CacheFactory, one behavior fix in MemcachedLock, plus ~30 javadoc/comment corrections. All gates green: compile ✓, javadoc doclint ✓ (zero warnings), 410 tests, 0 failures. Changes are in the working tree, uncommitted.
The off-heap bugs (and how they relate to tonight's revert)

I noticed you committed a large concurrency rework of
AbstractOffHeapCache tonight and reverted it 22 seconds later. I
verified its claims independently against the current code: three of its
four suspected races are real. Rather than re-apply the reverted patch
(whose per-key pool-lock scheme had delicate lock-ordering), I fixed
each bug minimally:

1. Use-after-free vs close() — the isClosed() fail-fast in put() was
check-then-act: a thread could pass the check, then close() (e.g. the
shutdown hook) would run deallocate() while the put was mid-copyToMemory
— writing into freed native memory (SIGSEGV or silent corruption on the
Unsafe subclass). The disk→memory promotion path had the same copy with
no check at all. Fixed with a lifecycle ReentrantReadWriteLock: writers
of native memory hold the read lock, close() holds the write lock across
teardown. Reads never needed it — the wrapper-monitor protocol already
protects them.
2. Promotion data loss — promoting a disk entry to memory destroyed the
disk wrapper (deleting the disk bytes) before installing the memory
copy; if that install then failed, the value vanished from both disk and
memory with no operation ever reporting failure. Now it installs first
and retires the disk wrapper only on success, restoring it otherwise.
3. Spurious "data corruption" on reads — StoreWrapper.readBytes()
checked store ownership and then fetched the bytes without the per-key
store lock, so a concurrent same-